--- a/dotnet.ipynb
+++ b/dotnet.ipynb
@@ -1,1 +1,27 @@
-
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "Console.WriteLine(\"Olá, mundo!\");"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".NET (C#)",
+      "language": "C#",
+      "name": ".net-csharp"
+    },
+    "language_info": {
+      "file_extension": ".cs",
+      "mimetype": "text/x-csharp",
+      "name": "C#"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
+}
